Can no longer support versions older than 1.7.
This is due to a dependency that uses reader conditionals, available only in
Clojure 1.7 and later.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ jdk:
   - oraclejdk7
   - openjdk7
 env:
-  - CLOJURE_VERSION=clj16
+  # No reader conditionals for Clojure 1.5 or 1.6 ...
+  #- CLOJURE_VERSION=clj15
+  #- CLOJURE_VERSION=clj16
   - CLOJURE_VERSION=clj17
   - CLOJURE_VERSION=clj18
   #- CLOJURE_VERSION=clj19
